--- a/LeoPay-Homepage.html
+++ b/LeoPay-Homepage.html
@@ -38,7 +38,7 @@
 
     }
     body {
-      background-image: url('path/to/your/image.jpg');
+      background-image: url("C:\Users\leonel\Downloads\GA background.jpg");
       background-size: cover; 
       background-repeat: no-repeat; 
     
